--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -22,11 +22,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+          
         </activity>
          <activity
-            android:name="com.telc.smartmemo.MainActivity"
+            android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
             android:label="@string/app_name" >
+            
         </activity>
+          
     </application>
 
 </manifest>
