move some operation about init database to MemoApplication.java and modify register

--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="com.telc.ui.main.MemoApplication" >
 
         <activity
             android:name="com.telc.ui.main.SlidingActivity"
