--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -13,15 +13,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo.NoActionBar" >
-
         <activity
             android:name="com.telc.ui.main.SlidingActivity"
             android:label="@string/title_activity_sliding" >
-
         </activity>
-         <activity
-            android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
-            android:label="@string/app_name" >
+        <activity
+            android:name="com.telc.ui.main.AnimationActivity"
+            android:label="@string/title_activity_sliding" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,12 +27,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="com.telc.ui.RealtimeMemo.RealtimeMemoActivity"
             android:label="@string/app_name" >
-            
         </activity>
-
-          
     </application>
 
 </manifest>
