--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -9,13 +9,11 @@
         android:targetSdkVersion="17" />
 
     <application
+        android:name="com.telc.ui.main.MemoApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-
-        android:theme="@style/AppTheme"
-        android:name="com.telc.ui.main.MemoApplication" >
-
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.telc.ui.main.SlidingActivity"
             android:label="@string/title_activity_sliding" >
@@ -28,6 +26,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.telc.ui.manage.SetTimingAlertActivity"
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
