--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:targetSdkVersion="17" />
 
     <application
-        android:name="com.telc.ui.main.MemoApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+
+        android:theme="@style/AppTheme"
+        android:name="com.telc.ui.main.MemoApplication" >
+
         <activity
             android:name="com.telc.ui.main.SlidingActivity"
             android:label="@string/title_activity_sliding" >
@@ -26,10 +28,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.telc.ui.manage.SetTimingAlertActivity"
-            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
