--- a/SmartMemoWeb/.classpath
+++ b/SmartMemoWeb/.classpath
@@ -10,7 +10,6 @@
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.lib.spring31.MYECLIPSE_SPRING31_WEB"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_EM"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.hibernate.MYECLIPSE_HIBERNATE3_3_CORE"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.21-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="D:/workspace/SmartMemoWeb/lib/commons-codec-1.7.jar"/>
 	<classpathentry kind="lib" path="D:/workspace/SmartMemoWeb/lib/commons-collections-3.2.1.jar"/>
@@ -73,5 +72,6 @@
 	<classpathentry kind="lib" path="D:/workspace/SmartMemoWeb/lib/xmlsec-1.5.4.jar"/>
 	<classpathentry kind="lib" path="D:/workspace/SmartMemoWeb/lib/xmltooling-1.3.2-1.jar"/>
 	<classpathentry kind="lib" path="D:/workspace/SmartMemoWeb/lib/xsdlib-2010.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/SZP/Documents/GitHub/Telc/Telc/SmartMemoWeb/lib/mysql-connector-java-commercial-5.1.26-bin.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
