--- a/SmartMemo/project.properties
+++ b/SmartMemo/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=android-17
 android.library=false
-android.library.reference.1=..\\..\\librarySlidingMenu
-android.library.reference.2=../../libraryActionBar
+android.library.reference.1=../../SlidingMenu/library
+android.library.reference.2=F:/javaEEExcercise/fragment/library2
