--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -18,16 +18,12 @@
 
         <activity
             android:name="com.telc.ui.main.SlidingActivity"
-            android:label="@string/title_activity_sliding" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:label="@string/app_name" >
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.telc.ui.main.AnimationActivity"
-            android:label="@string/title_activity_sliding" >
+            android:label="@string/app_name" >
 
         </activity>
         <activity
@@ -35,6 +31,17 @@
             android:label="@string/app_name" >
         </activity>
 
+        <activity
+            android:name="com.telc.ui.main.ViewPagerActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar">
+                <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
     </application>
 
 </manifest>
