--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -101,11 +101,18 @@
             android:theme="@android:style/Theme.Holo.Light.NoActionBar">
 
         </activity>
-            <activity
+         <activity
             android:name="com.telc.resource.baidumap.getPoisitionActivity"
             android:label="@string/app_name" >
         </activity>
-          
+          <activity android:name="com.telc.ui.Memos.RealtimeMemoActivity"
+              android:label="@string/app_name">
+              
+          </activity>
+          <activity 
+              android:name="com.telc.ui.Memos.PeriodicActivity"
+              android:label="@string/app_name">
+          </activity>
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
