--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -84,7 +84,8 @@
         </activity>
         <activity
             android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"  >
                   <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
