--- a/SmartMemo/project.properties
+++ b/SmartMemo/project.properties
@@ -14,5 +14,5 @@
 target=android-17
 android.library=false
 
-android.library.reference.1=../../libraryActionBar
-android.library.reference.2=../../librarySlidingMenu
+android.library.reference.1=libraryActionBar
+android.library.reference.2=librarySlidingMenu
