--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -84,16 +84,8 @@
         
         <activity
             android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"  >
-                  <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        
-        
+            android:label="@string/app_name">
+        </activity>   
           <activity
             android:name="com.telc.resource.baidumap.baiduMapActivity"
             android:label="@string/app_name" >
