--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -98,6 +98,7 @@
         </activity>
          <activity
             android:name="com.telc.resource.baidumap.getPoisitionActivity"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name" >
         </activity>
           <activity android:name="com.telc.ui.Memos.RealtimeMemoActivity"
