修改数据库字段

--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -110,6 +110,10 @@
               android:name="com.telc.ui.Memos.PeriodicActivity"
               android:label="@string/app_name">
           </activity>
+              <activity 
+              android:name="com.telc.ui.Memos.TimingMemoActivity"
+              android:label="@string/app_name">
+          </activity>
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
