--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -68,6 +68,7 @@
             android:name="com.telc.ui.main.SlidingActivity"
             android:label="@string/app_name" >
         </activity>
+        <receiver android:name="com.telc.ui.main.AlarmReceiver" android:process=":SmartMemoRemot" /> 
         <activity
             android:name="com.telc.ui.main.AnimationActivity"
             android:label="@string/app_name"
