--- a/SmartMemo/project.properties
+++ b/SmartMemo/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=android-17
-android.library=true
+android.library=false
 
 android.library.reference.1=libraryActionBar
 android.library.reference.2=librarySlidingMenu
