--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -109,7 +109,7 @@
           </activity>
           
           <activity 
-              android:name="com.telc.ui.Memos.PeriodicActivity"
+              android:name="com.telc.ui.Memos.PeriodicMemoActivity"
               android:label="@string/app_name">
           </activity>
               <activity 
