--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -116,6 +116,10 @@
               android:name="com.telc.ui.Memos.TimingMemoActivity"
               android:label="@string/app_name">
           </activity>
+          <activity
+              android:name="com.telc.ui.Memos.PeriodicMemoDelActivity"
+              android:label="@string/app_name">
+              </activity>
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
