--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -88,6 +88,12 @@
             android:name="com.telc.ui.systemManagement.LoginAndRegisterActivity"
             android:label="@string/app_name">
         </activity>   
+        
+         <activity
+            android:name="com.telc.ui.other.SettingActivity"
+            android:label="@string/app_name">
+        </activity>  
+        
           <activity
             android:name="com.telc.resource.baidumap.baiduMapActivity"
             android:label="@string/app_name" >
