--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -69,7 +69,7 @@
             android:label="@string/app_name" >
         </activity>
         <receiver android:name="com.telc.ui.main.viewModel.AlarmReceiver" android:process=":SmartMemoRemot" />
-        <receiver android:name="com.telc.ui.Memos.TimingReceiver" android:process=":SmartMemoRemot_main" /> 
+        <receiver android:name="com.telc.ui.Memos.TimingReceiver" android:process=":SmartMemo_timing" /> 
         <activity
             android:name="com.telc.ui.main.AnimationActivity"
             android:label="@string/app_name"
