--- a/SmartMemo/.classpath
+++ b/SmartMemo/.classpath
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-<<<<<<< HEAD
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="libs/ksoap2-android-assembly-3.0.0-jar-with-dependencies.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/baidumapapi_v2_1_3.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/locSDK_3.1.jar"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-=======
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="gen"/>
->>>>>>> 7d8507282047a76e2aefcd0d32e557e3fbf0baee
+	<classpathentry kind="lib" path="libs/baidumapapi_v2_1_3.jar"/>
+	<classpathentry kind="lib" path="libs/ksoap2-android-assembly-3.0.0-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="libs/locSDK_3.1.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
