--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -67,6 +67,7 @@
             android:name="com.telc.ui.main.SlidingActivity"
             android:label="@string/app_name" >
         </activity>
+        <!-- 定时提醒receiver -->
         <receiver android:name="com.telc.ui.Memos.TimingReceiver" android:process=":SmartMemo_timing" /> 
         <activity
             android:name="com.telc.ui.main.AnimationActivity"
