--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -119,6 +119,7 @@
           
           <activity 
               android:name="com.telc.ui.Memos.PeriodicMemoActivity"
+              android:windowSoftInputMode="adjustUnspecified|stateHidden"
               android:label="@string/app_name">
           </activity>
               <activity 
