--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -68,7 +68,9 @@
             android:label="@string/app_name" >
         </activity>
         <!-- 定时提醒receiver -->
-        <receiver android:name="com.telc.ui.Memos.TimingReceiver" android:process=":SmartMemo_timing" /> 
+        <receiver android:name="com.telc.ui.Memos.TimingReceiver" android:process=":SmartMemo_timing" />
+        <!-- 周期性提醒receiver -->
+        <receiver android:name="com.telc.ui.Memos.PeriodicReceiver" android:process=":SmartMemo_periodic" />  
         <activity
             android:name="com.telc.ui.main.AnimationActivity"
             android:label="@string/app_name"
