--- a/SmartMemo/AndroidManifest.xml
+++ b/SmartMemo/AndroidManifest.xml
@@ -68,7 +68,7 @@
             android:label="@string/app_name" >
         </activity>
         <!-- 定时提醒receiver -->
-        <receiver android:name="com.telc.ui.Memos.TimingReceiver" android:process=":SmartMemo_reciver" />
+        <receiver android:name="com.telc.ui.main.viewModel.Receiver" android:process=":SmartMemo_reciver" />
         <activity
             android:name="com.telc.ui.main.AnimationActivity"
             android:label="@string/app_name"
